# customer-intelligence-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
frontend/: app.js  index.html  styles.css
src/: api.py
src/clustering/: embedding_clustering.py  embedding_visualization.py  evaluation.py  kmeans.py  visualization.py
src/data/: feature_engineering.py  loader.py  preprocessing.py
src/hierarchy/: label_generator.py  tree_builder.py
src/models/: baseline_classifier.py  embeddings.py  hierarchical_softmax.py  predict.py  train.py
src/pipeline/: main_pipeline.py
src/recommendation/: recommender.py
src/utils/: config.py  logger.py  seed.py
tests/: test_clustering.py  test_config.py  test_feature_engineering.py  test_hierarchy_and_recommendation.py  test_preprocessing.py
